fix: accidentially set language to a single type, changed it to a collection type

--- a/src/api/language/content-types/language/schema.json
+++ b/src/api/language/content-types/language/schema.json
@@ -1,5 +1,5 @@
 {
-  "kind": "singleType",
+  "kind": "collectionType",
   "collectionName": "languages",
   "info": {
     "singularName": "language",
@@ -16,6 +16,9 @@
     },
     "value": {
       "type": "string"
+    },
+    "order": {
+      "type": "integer"
     }
   }
 }
